<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    style="@style/CardView_Default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance_Title_Medium"
                    android:text="@string/settings_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance_Caption"
                    android:layout_marginTop="4dp"
                    android:text="@string/settings_subtitle" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/close_button"
                style="@style/ImageButton_Icon_Large"
                android:layout_gravity="top"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/CardView_Filter">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance_Title_Small"
                        android:text="@string/language_setting_title" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance_Caption"
                        android:layout_marginTop="2dp"
                        android:text="@string/language_setting_subtitle" />
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/language_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:trackTint="@color/gray"
                    app:thumbTint="@color/white"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>