<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/CardView_LowElevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:queryHint="@string/search_hint" />

            <ImageButton
                android:id="@+id/filter_button"
                style="@style/ImageButton_Icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/filtration"
                android:src="@drawable/ic_filter"
                app:tint="@color/gray"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_card">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ads_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:clipToPadding="false"
            android:padding="8dp"
            tools:listitem="@layout/item_ad" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/empty_state_layout"
        style="@style/EmptyState_Container"
        app:layout_constraintBottom_toBottomOf="@+id/swipe_refresh_layout"
        app:layout_constraintEnd_toEndOf="@+id/swipe_refresh_layout"
        app:layout_constraintStart_toStartOf="@+id/swipe_refresh_layout"
        app:layout_constraintTop_toTopOf="@+id/swipe_refresh_layout">

        <com.google.android.material.imageview.ShapeableImageView
            style="@style/EmptyState_Image"
            android:src="@drawable/ic_not_found" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/EmptyState_Title"
            android:text="@string/no_ads_found" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/EmptyState_Description"
            android:text="@string/no_ads_description" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>